<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.shopverse_customer_app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_productDetailFragment"
            app:destination="@id/productDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.shopverse_customer_app.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_productListFragment"
            app:destination="@id/productListFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.shopverse_customer_app.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_navigation_cart_to_navigation_checkout"
            app:destination="@id/navigation_checkout" />
    </fragment>

    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.example.shopverse_customer_app.ui.maps.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.shopverse_customer_app.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account">
        <action
            android:id="@+id/action_navigation_account_to_orderHistoryFragment"
            app:destination="@id/orderHistoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/orderHistoryFragment"
        android:name="com.example.shopverse_customer_app.ui.orderhistory.OrderHistoryFragment"
        android:label="Lịch sử đơn hàng"
        tools:layout="@layout/fragment_order_history" />

    <fragment
        android:id="@+id/navigation_checkout"
        android:name="com.example.shopverse_customer_app.ui.checkout.CheckoutFragment"
        android:label="Thanh toán"
        tools:layout="@layout/fragment_checkout">
        <argument
            android:name="cart_items"
            app:argType="java.util.ArrayList" />
    </fragment>

    <fragment
        android:id="@+id/productListFragment"
        android:name="com.example.shopverse_customer_app.ui.productlist.ProductListFragment"
        android:label="Product List"
        tools:layout="@layout/fragment_product_list">
        <argument
            android:name="category"
            app:argType="com.example.shopverse_customer_app.data.model.Category" />
        <action
            android:id="@+id/action_productListFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.example.shopverse_customer_app.ui.productdetail.ProductDetailFragment"
        android:label="Product Detail"
        tools:layout="@layout/fragment_product_detail">
        <argument
            android:name="product"
            app:argType="com.example.shopverse_customer_app.data.model.Product" />
    </fragment>
</navigation>